tests/ui/bits_param/invalid_param_type.stderr
error: encountered invalid value argument for #[bitfield] `bits` parameter
 --> tests/ui/bits_param/invalid_param_type.rs:5:19
  |
5 | #[bitfield(bits = NOT_LITERAL)]
  |                   ^^^^^^^^^^^
